Sidebar no longer overlaps content. User and Profile page looks nicer

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -83,6 +83,7 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  margin-left: 75px;
 }
 
 hr {
@@ -11288,7 +11289,6 @@ h1, .h1 {
 .content-wrapper {
   width: inherit;
   /*max-width: 50%;*/
-  margin-left: 15px;
   text-align: center;
 }
 
@@ -11358,7 +11358,7 @@ input[type=submit]:hover {
 .download {
   border-radius: 5px;
   background-color: #f2f2f2;
-  padding-left: 5rem;
+  padding-left: 1%;
 }
 
 #download_form {
@@ -11394,5 +11394,9 @@ input[type=submit]:hover {
 
 .form_only {
   width: 300px;
-  padding: 0 5%;
+  padding: 0 1%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  background-color: #fff;
 }
