--- a/resources/sass/_home.scss
+++ b/resources/sass/_home.scss
@@ -4,7 +4,6 @@ h1 {
 .content-wrapper {
     width: inherit;
     /*max-width: 50%;*/
-    margin-left: 15px;
     text-align: center;
 }
 
